Fixed language selection on mobile

--- a/static/header.css
+++ b/static/header.css
@@ -5,17 +5,29 @@ body > header {
 }
 
 header > ul {
-  position: absolute;
   inset-inline-start: 30px;
   inset-block-start: 20px;
 
-  margin: 0;
+  margin-inline: 0;
+  margin-block-start: 10px;
+  margin-block-end: 0;
   padding: 0;
+
+  align-self: start;
 
   display: flex;
   flex-direction: row;
   list-style: none;
   color: var(--secondary-color);
+}
+
+@media (min-width: 800px) {
+  header > ul {
+    position: absolute;
+    margin: 0;
+    align-self: initial;
+  }
+
 }
 
 header > ul > li > a {
